--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discount Lookup Tool</title>
   <link rel="stylesheet" href="style.css">
-  
-
 </head>
 <body>
   <div id="logo-container">
-    <a id="HaulersUnitedLogo" href="https://haulersunited.squarespace.com/" target="_blank">
+    <a id="HaulersUnitedLogo" href="https://haulersunited.org" target="_blank">
       <img src="assets/logo wordmark HU 3 no back.png" alt="Haulers United Logo and Link Back to Website">
     </a>
   </div>
@@ -40,7 +38,18 @@
       <div id="map" style="height: 500px; width: 100%;"></div>
     </div>
   </div>
-  
+
+  <!-- New Section: Sign Up -->
+  <div id="signup-container" style="text-align: center; margin-top: 20px;">
+    <p style="font-size: 16px; margin-bottom: 10px;">
+      No membership fees or volume requirements. Get these prices today regardless of how many gallons you purchase.
+    </p>
+    <a href="https://www.haulersunited.org/join" target="_blank">
+      <button id="signup-button" style="padding: 12px 20px; font-size: 16px; background-color: #1A73E8; color: white; border: none; border-radius: 5px; cursor: pointer;">
+        Sign Up Here
+      </button>
+    </a>
+  </div>
 
   <!-- Google Maps API -->
   <script 
@@ -48,7 +57,5 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
   <script src="main.js"></script>
- 
-
 </body>
 </html>
