--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav id="navbar" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 20px; background-color: #1A73E8; color: white;">
+  <nav id="navbar" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 20px; color: white;">
     <!-- Logo -->
     <div id="logo-container">
       
-        <img src="assets/logo wordmark HU 3 no back.png" alt="Haulers United Logo">
+        <img src="assets/Haulers United White On Black Logo.png" alt="Haulers United Logo">
       </a>
     </div>
     <!-- Navigation Links -->
@@ -33,25 +33,20 @@
   <div id="tool-container">
     <div id="discount-tool">
       <h2>Discount Lookup Tool</h2>
-
-      <!-- Dropdown for tool selection -->
+  
+      <!-- Toggle Button for Tool Selection -->
       <div id="tool-selection">
-        <label for="toolType">Choose Tool:</label>
-        <select id="toolType" onchange="updateToolType()">
-          <option value="">Select</option>
-          <option value="singleAddress">Single Address</option>
-          <option value="createRoute">Create Route</option>
-        </select>
+        <button id="toggleTool" onclick="toggleTool()">Switch to Create Route</button>
       </div>
-
-      <!-- Single Address Tool (Hidden by default) -->
-      <div id="singleAddressTool" style="display: none;">
+  
+      <!-- Single Address Tool (Displayed by default) -->
+      <div id="singleAddressTool" style="display: block;">
         <h3>Single Address Lookup</h3>
         <label for="singleAddressInput">Enter Address:</label>
-        <input type="text" id="singleAddressInput" name="no-autocomplete" placeholder="Enter the address" autocomplete="new-password"/>
-        <button onclick="findStationsForSingleAddress()" id="findStations">Find Gas Stations</button>
+        <input type="text" id="singleAddressInput" name="no-autocomplete" placeholder="Enter the address" autocomplete="new-password" />
+        <button onclick="findStationsForSingleAddress()" id="findStations">Find Truck Stops</button>
       </div>
-
+  
       <!-- Create Route Tool (Hidden by default) -->
       <div id="routeTool" style="display: none;">
         <h3>Create Route</h3>
@@ -67,9 +62,9 @@
         </div>
         <button onclick="performRoute()" id="calculateRoute">Route</button>
       </div>
-
+  
       <div id="highlightedStationsContainer" style="display: none;">
-        <h3 id="highlightedStationsHeading">Stations Near Route:</h3>
+        <h3 id="highlightedStationsHeading">Stations Near Address:</h3>
         <ul id="highlightedStationsList"></ul>
       </div>
       <div id="station-toggle">
@@ -79,6 +74,8 @@
     <div id="map-container">
       <div id="map" style="height: 500px; width: 100%;"></div>
     </div>
+  </div>
+  
     
   </div>
   <footer>
