--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p id="toggleToolLabel">Single Address Lookup</p>
       </div> -->
 
-      <div id="tool-selection" style="text-align: center; margin: 20px 0;">
+      <div id="tool-selection">
         <label class="toggle-switch">
           <input type="checkbox" id="toggleToolSwitch" onchange="toggleTool()">
           <span class="slider">
