--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div id="tool-container">
     <div id="discount-tool">
-      <h2>Discount Lookup Tool</h2>
+      <h2>Member Fuel Prices</h2>
   
       <!-- Toggle Button for Tool Selection -->
       <!-- <div id="tool-selection">
